# zenith-ai

./: .env.example  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.yml  langsmith.docker-compose.yaml  main.py  pyproject.toml  requirements.txt  users.xml
core/: config.py  dependencies.py  globals.py  main.py  utils.py
core/graph/: constant.py  state.py  workflow.py
core/graph/agent/: __init__.py  booking.py  general.py  inquiry.py  manager.py  sql.py
core/graph/chain/: __init__.py  conversation.py
core/graph/node/: __init__.py  booking.py  conversation.py  general.py  inquiry.py  manager.py  rag.py  router.py  sql.py
core/graph/nodes/: conversation.py
core/graph/tools/: __init__.py  qdrant.py
core/mcp/qdrant/: server.py
core/routers/: chat.py  health.py
core/schemas/: __init__.py  booking.py  chat.py  health.py
core/services/deepinfra/: __init__.py  client.py  factory.py
core/services/mcp/: __init__.py  client.py
core/services/mlflow/: __init__.py  client.py  factory.py
core/services/qdrant/: __init__.py  client.py  factory.py
data/csv/: rerank_train.csv
data/mlflow_db_data/: postmaster.pid
data/postgres_data/: postmaster.pid
data/qdrant_data/: raft_state.json
docker/: gradio.Dockerfile  mlflow.Dockerfile
frontend/: main.py
graph/: workflow.py
graph/agent/: booking.py  general.py  inquiry.py  manager.py  sql.py
graph/node/: booking.py  general.py  inquiry.py  manager.py  router.py  sql.py
graph/tools/: qdrant.py
mcp/qdrant/: qdrant.mcp.Dockerfile  server.py
mlruns/0/: meta.yaml
notebooks/: deepinfra.ipynb  extract_pdf.ipynb  firecrawl.ipynb  generate_reranker_dataset.ipynb  populate_rerank_dataset_to_db.ipynb  rerank_dataset_generation.ipynb  retrieve.ipynb  training_rerank.ipynb
qdrant_data/: raft_state.json
scripts/: init.sql
(+541 files in other folders)
