[project]
name = "zenith-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.11.0",
    "fastapi[standard]>=0.121.1",
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.3",
    "langsmith>=0.4.42",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]
