[project]
name = "zenith-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "black>=25.11.0",
    "fastapi[standard]>=0.121.1",
    "gradio>=6.0.1",
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-ollama>=1.0.0",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.0.3",
    "mlflow>=3.6.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.14.3",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
    "unstructured[all-docs]>=0.18.21",
    "xgboost>=3.1.2",
]
